added sumbit button to contact form

--- a/contact-form.html
+++ b/contact-form.html
@@ -35,7 +35,7 @@
 
   <!--  Contact Form -->
   <div class="container" id="contact-form">
-    <form action="mailto:alexandermlee10@gmail.com" method="POST">
+    <form>
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="name">Full Name</label>
@@ -71,6 +71,7 @@
           <input type="text" class="form-control" id="zip">
         </div>
       </div>
+      <input id='contact-submit' class="btn btn-primary" type='submit'>
     </form>
   </div>
   
