--- a/paramount-index.html
+++ b/paramount-index.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" type="text/css" href="paramount-styles.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
-<body onload='typeWriter()'>
-
+<body>
 <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <a class="navbar-brand" href="#">Paramount HHC</a>
